Bug 1211547 - Don't round font scaling for GTK. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D219821